--- a/fontcss.html
+++ b/fontcss.html
@@ -109,7 +109,7 @@ code,pre,samp{font-family: monaco;}
 <div class="cb" style="max-width: 100%; border-top: 1px lightgrey solid;">
 <svg style="cursor: pointer; transition: .3s;" onclick="navigator.clipboard.writeText(csstxt);"
 width="15px" height="15px" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>copy</title> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="copy" fill="#000000" transform="translate(85.333333, 42.666667)"> <path d="M341.333333,85.3333333 L341.333333,405.333333 L85.3333333,405.333333 L85.3333333,85.3333333 L341.333333,85.3333333 Z M298.666667,128 L128,128 L128,362.666667 L298.666667,362.666667 L298.666667,128 Z M234.666667,7.10542736e-15 L234.666667,42.6666667 L42.6666667,42.6666667 L42.6666667,298.666667 L1.42108547e-14,298.666667 L1.42108547e-14,7.10542736e-15 L234.666667,7.10542736e-15 Z"> </path> </g> </g> </g></svg>
-<pre class="prettyprint lang-html" style="border: 0px; padding: 1.5em 10vw 1.5em 10vw;">
+<pre class="prettyprint lang-html" style="border: 0px; padding: 1.5em 10vw 1.5em 10vw;" translate="no">
 &lt;link rel="stylesheet" href="https://xolyn.github.io/font.css">
 </pre>
 </div>
@@ -117,159 +117,159 @@ width="15px" height="15px" viewBox="0 0 512 512" version="1.1" xmlns="http://www
 
 <article style="">
 <p>
-    Then refer to the preview below for your preferred fonts and use corresponding alias.
+    Then edit and refer to the preview below to choose fonts you like to use them by corresponding alias(es). 
 </p>
     <div style="display: flex; align-items: center; font-family: sf_l;">
-        <label for="fontSizeRange" style="font-size: x-small;">A&nbsp;</label>
+        <label translate="no" for="fontSizeRange" style="font-size: x-small;">A&nbsp;</label>
         <input type="range" id="fontSizeRange" name="fontSizeRange" min="5" max="95" value="16">
-        <span style="font-size: x-large;">&nbsp;A</span>
+        <span style="font-size: x-large;" translate="no">&nbsp;A</span>
     </div>
     
-    <fieldset>
+    <fieldset translate="no">
         <legend>BDLifelessGrotesk</legend>
         <div style="font-family:BDLifelessGrotesk;" class="usrtxt" id="orig" contenteditable >The quick brown fox jumps over the lazy dog.</div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>CascadiaMono-Regular</legend>
         <div style="font-family:CascadiaMono-Regular;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>cour</legend>
         <div style="font-family:cour;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>CourierPrime-Regular</legend>
         <div style="font-family:CourierPrime-Regular;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>dtb</legend>
         <div style="font-family:dtb;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>ere</legend>
         <div style="font-family:ere;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>Erewhon-Bold</legend>
         <div style="font-family:Erewhon-Bold;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>iom</legend>
         <div style="font-family:iom;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>Monolisa Font</legend>
         <div style="font-family:Monolisa Font;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>Neue Kaine Variable</legend>
         <div style="font-family:Neue Kaine Variable;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>Neue Regrade Bold</legend>
         <div style="font-family:Neue Regrade Bold;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>Neue Regrade Medium</legend>
         <div style="font-family:Neue Regrade Medium;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>nhm</legend>
         <div style="font-family:nhm;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>nhr</legend>
         <div style="font-family:nhr;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>sf-round</legend>
         <div style="font-family:sf-round;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>sf_b</legend>
         <div style="font-family:sf_b;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>sf_l</legend>
         <div style="font-family:sf_l;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>sf_r</legend>
         <div style="font-family:sf_r;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>sig</legend>
         <div style="font-family:sig;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>sneak</legend>
         <div style="font-family:sneak;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>sohne</legend>
         <div style="font-family:sohne;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>appletc</legend>
         <div style="font-family:appletc;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>diag_r</legend>
         <div style="font-family:diag_r;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>diag_b</legend>
         <div style="font-family:diag_b;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>chirp_r</legend>
         <div style="font-family:chirp_r;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>chirp_m</legend>
         <div style="font-family:chirp_m;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>humanbby</legend>
         <div style="font-family:humanbby;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>geist</legend>
         <div style="font-family:geist;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>fira</legend>
         <div style="font-family:fira;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>firamono</legend>
         <div style="font-family:firamono;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>aptos</legend>
         <div style="font-family:aptos;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>bios</legend>
         <div style="font-family:bios;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>vulf</legend>
         <div style="font-family:vulf;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>monaco</legend>
         <div style="font-family:monaco;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>palo</legend>
         <div style="font-family:palo;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>questa</legend>
         <div style="font-family:questa;" class="usrtxt" contenteditable ></div>
     </fieldset>
-    <fieldset>
+    <fieldset translate="no">
         <legend>fsk</legend>
         <div style="font-family:fsk;" class="usrtxt" contenteditable ></div>
     </fieldset>
