--- a/file_tree.html
+++ b/file_tree.html
@@ -76,8 +76,7 @@ summary{cursor:pointer}</style>
 </details>
 <details>
 <summary>empty</summary>
-<ul>
-</ul>
+<ul><span style="color:grey;font-style:italic">blank folder</span></ul>
 </details>
 <details>
 <summary>fg</summary>
@@ -132,13 +131,6 @@ summary{cursor:pointer}</style>
 <li><a href=".\fonts\sneak.ttf">sneak.ttf</a></li>
 <li><a href=".\fonts\sohne.otf">sohne.otf</a></li>
 <li><a href=".\fonts\VulfSans-Regular.ttf">VulfSans-Regular.ttf</a></li>
-</ul>
-</details>
-<details>
-<summary>gen.ft</summary>
-<ul>
-<li><a href=".\gen.ft\ft.html">ft.html</a></li>
-<li><a href=".\gen.ft\genft.ipynb">genft.ipynb</a></li>
 </ul>
 </details>
 <details>
@@ -232,7 +224,6 @@ summary{cursor:pointer}</style>
 <li><a href=".\mkdocs\mkdocs.yml">mkdocs.yml</a></li>
 </ul>
 </details>
-<li><a href=".\!genft.py">!genft.py</a></li>
 <li><a href=".\404.html">404.html</a></li>
 <li><a href=".\5010note.md">5010note.md</a></li>
 <li><a href=".\5060note.md">5060note.md</a></li>
@@ -246,6 +237,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\cyb.html">cyb.html</a></li>
 <li><a href=".\fdd.html">fdd.html</a></li>
 <li><a href=".\fg2.html">fg2.html</a></li>
+<li><a href=".\file_tree.html">file_tree.html</a></li>
 <li><a href=".\font.css">font.css</a></li>
 <li><a href=".\fontcss.html">fontcss.html</a></li>
 <li><a href=".\gall.html">gall.html</a></li>
@@ -275,6 +267,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\test.jpg">test.jpg</a></li>
 <li><a href=".\timeline.css">timeline.css</a></li>
 <li><a href=".\widgets.html">widgets.html</a></li>
+<li><a href=".\yafiwg.py">yafiwg.py</a></li>
 <li><a href=".\zune.html">zune.html</a></li>
 </ul>
 </details>
