--- a/fg2.html
+++ b/fg2.html
@@ -4,39 +4,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel='stylesheet' href='font.css'>
 <link rel="icon" href="assets/font.svg" type="image/png">
 
 <title>fonts studio</title>
 <style>
-@import url(https://db.onlinewebfonts.com/c/1058bc9f019dd38b7c08014b7d82b017?family=Sneak-Regular);
-@import url(https://db.onlinewebfonts.com/c/88f10bf18a36407ef36bf30bc25a3618?family=SuisseIntl-Regular);
-@import url(https://db.onlinewebfonts.com/c/031da03967812d134ed68febd3ba78a9?family=GT+America+Regular);
-@import url(https://db.onlinewebfonts.com/c/6e47ef470dd19698c911332a9b4d1cf4?family=Neue+Haas+Grotesk+Text+Pro);
-@font-face {
-      font-family: sig;
-      src: url("fonts/sig.otf");
-    }
-
-    @font-face {
-      font-family: soh;
-      src: url("fonts/sohne.otf");
-    }
-
-    @font-face {
-      font-family: sfr;
-      src: url("fonts/sf-round.otf");
-    }
-
-    @font-face {
-      font-family: crp;
-      src: url("fonts/ChirpRegular.ttf");
-    }
-
     
     body {
         margin: 0;
         padding: 0 20px;
-        font-family: soh;
+        font-family: sohne;
         display: flex;
         flex-direction: column; 
         align-items: flex-start; 
@@ -126,7 +103,7 @@
             /* background-color:black;  */
             transition: .75s;
             
-            font-family: sfr;
+            font-family: sf-round;
             /* font-family: "Neue Haas Grotesk Text Pro"; */
         }
 
@@ -139,7 +116,7 @@
         .btma{
             color:gray;
             transition: .3s;
-            font-family: crp;
+            font-family: chirp_r;
         }
 
         .btma:hover{
@@ -151,12 +128,12 @@
 </head>
 <body>
 <p style="font-size: xx-large; font-family: sig; margin:0px 0px .5vh">fonts studio</p> <!-- Title for the gallery -->
-<a href="https://xolyn.github.io/fontcss" style="margin:0px 0px 2.5vh; font-size: x-small;" class="btma">Try featured fonts in your website by simply linking font.css! <span style="font-family: sfr;">&rarr;</span></a>
+<a href="fontcss.html" style="margin:0px 0px 2.5vh; font-size: large;" class="btma">Try more fonts on your website! <span style="font-family: sf-round;">&rarr;</span></a>
 <div class="gallery">
 
     <a  class="item" href="fg/sohne.html">
         <div >
-            <p style=" font-family: soh;">Söhne</p>
+            <p style=" font-family: sohne;">Söhne</p>
         </div>
       </a>
 
@@ -168,25 +145,25 @@
 
         <a   class="item" href="fg/gtamerica.html">
             <div >
-                <p style=" font-family: GT America Regular;">GT America</p>
+                <p style=" font-family:gtamerica">GT America</p>
             </div>
           </a>
 
         <a   class="item" href="fg/nhg.html">
             <div >
-                <p style=" font-family: Neue Haas Grotesk Text Pro;">Neue Haas Grotesk</p>
+                <p style=" font-family: nhr;">Neue Haas Grotesk</p>
             </div>
           </a>
   
           <a  class="item" href="fg/sneak.html">
             <div >
-                <p style=" font-family: 'Sneak-Regular';">Sneak</p>
+                <p style=" font-family: 'sneak';">Sneak</p>
             </div>
           </a>
   
           <a   class="item" href="suissen.html">
             <div >
-                <p style=" font-family: SuisseIntl-Regular;">Suissen Intl</p>
+                <p style=" font-family: suisse;">Suissen Intl</p>
             </div>
           </a>
 
