--- a/me.html
+++ b/me.html
@@ -263,6 +263,7 @@ function closeNav() {
       </p>
       </div>
     <div class="nic" style="line-height: 0.9; cursor:default">Lingyu<br>Zhou</div>
+    <script src='https://f.zly.vg/js/newurl.js'></script>
 
     <script>
         function showabout() {
