--- a/nic.html
+++ b/nic.html
@@ -32,7 +32,9 @@
 </head>
 <body>
 <div class="spin" id="spin" style="transition: 1s; cursor: pointer;" >&nbsp;&nbsp;&nbsp;&nbsp;ZHO<span style="color:orangered">U</span><span style=" display: inline-block; transform:  scaleX(-1);">LINGY</span></div>
-    <script>
+<script src='https://f.zly.vg/js/newurl.js'></script>
+
+<script>
             document.getElementById('spin').addEventListener('click', function() {
         this.classList.toggle('flipped');
     });
