--- a/self.html
+++ b/self.html
@@ -295,6 +295,7 @@ function closeNav() {
 
 
     <div class="nic" style="  line-height: 0.9;">Lingyu<br>Zhou</div>
+    <script src='https://f.zly.vg/js/newurl.js'></script>
 
 </body>
 
