--- a/sm.html
+++ b/sm.html
@@ -205,9 +205,6 @@ details >a {
 └ ─ <a class="ne" style="text-decoration: line-through;" >zly1.com</a>
 
 </pre>
-
-</body>
-
 <footer>
     <div style="display: flex; justify-content: space-between; width: 80vw;  margin: 0 auto; padding: auto;">
     <div style="display: inline-block;">
@@ -219,4 +216,9 @@ details >a {
     </div>
     </div>
     </footer>
+<script src='https://f.zly.vg/js/newurl.js'></script>
+
+</body>
+
+
 
