--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     color: black; 
     padding: 1em 0 3em 0; 
     }
+
     #myPre {
             display: none;
     }
@@ -78,13 +79,15 @@
 </p>
 
 <div id="myPre">
-<pre  style=" line-height: 0.8; font-size: xx-small;">
-        __      ______      __                             
- ____  / /_  __/ ____ \____/ /_____________  ____ ___
-/_  / / / / / / / __ `/ __  / ___/ ___/ __ \/ __ `__ \
- / /_/ / /_/ / / /_/ / /_/ / /  / /__/ /_/ / / / / / /
-/___/_/\__, /\ \__,_/\__,_/_(_) \___/\____/_/ /_/ /_/
-      /____/  \____/                               
+<pre  style=" line-height: .9; font-size: xx-small; font-family: firamono, monospace;">
+ _                _                         
+(_)   ____       | |                        
+ _   / __ \  ____| | _   _    __   __  __ _ 
+| | / / _` ||_  /| || | | |   \ \ / / / _` |
+| || | (_| | / / | || |_| | _  \ V / | (_| |
+|_| \ \__,_|/___||_| \__, |(_)  \_/   \__, |
+     \____/           __/ |            __/ |
+                     |___/            |___/ 
 </pre>
 </div>
 
@@ -93,26 +96,6 @@
     <a href="gall.html">gallery></a><br>
     <a href="fg2.html">font studio></a><br>
     <a href="sm.html" title="Eye of God">site map></a></p>
-
-    <!-- <a href="https://aqmn.github.io/guess">fun></a><br> -->
-    <!-- <a href="https://aqmn.github.io">demo1></a><br>
-    <a href="https://aqmn.github.io/index-code">demo2></a><br>
-    <a href="https://aqmn.github.io/index0">demo3></a><br>
-    <a href="https://aqmn.github.io/comm2">demo4></a><br> -->
-    <!-- <a class="" href="https://aqmn.github.io/cmd">demo5(beta)></a></p> -->
-        
-<!-- 
-.     ._, ._,  _,  __                 ..        .     
-| __. |_  (_  (_) /(]|  _. _ ._.._  _ ||    _  _|  .  
-|  /_. _) (_) (_) \__/ (_.(_)[  | |(/,|| . (/,(_](_|  
-                                                    
-      __     _____     __                      
- ___ / /_ __/ ___ \___/ /___ _______  __ _     
-/_ // / // / / _ `/ _  / __// __/ _ \/  ' \    
-/__/_/\_, /\ \_,_/\_,_/_/ (_)__/\___/_/_/_/    
-     /___/  \___/     
-                               -->
-
 </div>
 
 <footer>
