--- a/file_tree.html
+++ b/file_tree.html
@@ -23,6 +23,7 @@ summary{cursor:pointer}</style>
 <ul>
 <li><a href=".\.bu\fontcss.html">fontcss.html</a></li>
 <li><a href=".\.bu\fontcss.n.html">fontcss.n.html</a></li>
+<li><a href=".\.bu\index-part.txt">index-part.txt</a></li>
 </ul>
 </details>
 <details>
@@ -46,32 +47,9 @@ summary{cursor:pointer}</style>
 <details>
 <summary>data</summary>
 <ul>
-<li><a href=".\data\Cash Price.csv">Cash Price.csv</a></li>
-<li><a href=".\data\cb_sboil_prod.csv">cb_sboil_prod.csv</a></li>
-<li><a href=".\data\China_Cereal_Production.csv">China_Cereal_Production.csv</a></li>
-<li><a href=".\data\China_Population.csv">China_Population.csv</a></li>
-<li><a href=".\data\China_Soybean_Oil_Consumption.csv">China_Soybean_Oil_Consumption.csv</a></li>
-<li><a href=".\data\China_Soybean_Production.csv">China_Soybean_Production.csv</a></li>
-<li><a href=".\data\cnsbi.csv">cnsbi.csv</a></li>
-<li><a href=".\data\cn_cereal.csv">cn_cereal.csv</a></li>
-<li><a href=".\data\cn_sboil_consump.csv">cn_sboil_consump.csv</a></li>
-<li><a href=".\data\cn_tariff.csv">cn_tariff.csv</a></li>
-<li><a href=".\data\cn_tariff1.csv">cn_tariff1.csv</a></li>
-<li><a href=".\data\cn_tariff2.csv">cn_tariff2.csv</a></li>
-<li><a href=".\data\dfall.csv">dfall.csv</a></li>
-<li><a href=".\data\dff.csv">dff.csv</a></li>
-<li><a href=".\data\dffold.csv">dffold.csv</a></li>
-<li><a href=".\data\dls.csv">dls.csv</a></li>
-<li><a href=".\data\Exporter_GDP(currency_count)_per_capta.csv">Exporter_GDP(currency_count)_per_capta.csv</a></li>
-<li><a href=".\data\Feed Use.csv">Feed Use.csv</a></li>
-<li><a href=".\data\GDP(US+AR+BR+CN).csv">GDP(US+AR+BR+CN).csv</a></li>
-<li><a href=".\data\nysgdf.csv">nysgdf.csv</a></li>
-<li><a href=".\data\sbprod_us_bz.csv">sbprod_us_bz.csv</a></li>
-<li><a href=".\data\Soybean Import Volume From Different Region.csv">Soybean Import Volume From Different Region.csv</a></li>
-<li><a href=".\data\tdls-prev.csv">tdls-prev.csv</a></li>
-<li><a href=".\data\tdls.csv">tdls.csv</a></li>
-<li><a href=".\data\Total Soybean Import Volume.csv">Total Soybean Import Volume.csv</a></li>
-<li><a href=".\data\TradeBalanceCN.csv">TradeBalanceCN.csv</a></li>
+<li><a href=".\data\test.csv">test.csv</a></li>
+<li><a href=".\data\train.csv">train.csv</a></li>
+<li><a href=".\data\validation.csv">validation.csv</a></li>
 </ul>
 </details>
 <details>
@@ -111,6 +89,10 @@ summary{cursor:pointer}</style>
 <li><a href=".\fonts\FiraSans-Regular.ttf">FiraSans-Regular.ttf</a></li>
 <li><a href=".\fonts\FSKoopmanVF.ttf">FSKoopmanVF.ttf</a></li>
 <li><a href=".\fonts\GeistVF.ttf">GeistVF.ttf</a></li>
+<li><a href=".\fonts\georgia.ttf">georgia.ttf</a></li>
+<li><a href=".\fonts\georgiab.ttf">georgiab.ttf</a></li>
+<li><a href=".\fonts\GT America Regular.ttf">GT America Regular.ttf</a></li>
+<li><a href=".\fonts\HelveticaNowDisplay-Regular.otf">HelveticaNowDisplay-Regular.otf</a></li>
 <li><a href=".\fonts\Human BBY Web.ttf">Human BBY Web.ttf</a></li>
 <li><a href=".\fonts\iom.otf">iom.otf</a></li>
 <li><a href=".\fonts\Monaco.ttf">Monaco.ttf</a></li>
@@ -123,6 +105,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\fonts\Palo-Regular.ttf">Palo-Regular.ttf</a></li>
 <li><a href=".\fonts\Px437_IBM_EGA_8x14.ttf">Px437_IBM_EGA_8x14.ttf</a></li>
 <li><a href=".\fonts\Questa_Sans_Regular.otf">Questa_Sans_Regular.otf</a></li>
+<li><a href=".\fonts\Segoe Pro.ttf">Segoe Pro.ttf</a></li>
 <li><a href=".\fonts\sf-round.otf">sf-round.otf</a></li>
 <li><a href=".\fonts\sf_b.otf">sf_b.otf</a></li>
 <li><a href=".\fonts\sf_l.otf">sf_l.otf</a></li>
@@ -130,6 +113,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\fonts\sig.otf">sig.otf</a></li>
 <li><a href=".\fonts\sneak.ttf">sneak.ttf</a></li>
 <li><a href=".\fonts\sohne.otf">sohne.otf</a></li>
+<li><a href=".\fonts\SuisseIntl-Regular.ttf">SuisseIntl-Regular.ttf</a></li>
 <li><a href=".\fonts\VulfSans-Regular.ttf">VulfSans-Regular.ttf</a></li>
 </ul>
 </details>
@@ -224,6 +208,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\mkdocs\mkdocs.yml">mkdocs.yml</a></li>
 </ul>
 </details>
+<li><a href=".\.gitignore">.gitignore</a></li>
 <li><a href=".\404.html">404.html</a></li>
 <li><a href=".\5010note.md">5010note.md</a></li>
 <li><a href=".\5060note.md">5060note.md</a></li>
@@ -255,6 +240,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\nic.html">nic.html</a></li>
 <li><a href=".\notyet.html">notyet.html</a></li>
 <li><a href=".\oly.html">oly.html</a></li>
+<li><a href=".\proj.html">proj.html</a></li>
 <li><a href=".\sb.html">sb.html</a></li>
 <li><a href=".\self.html">self.html</a></li>
 <li><a href=".\showimg.html">showimg.html</a></li>
@@ -264,6 +250,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\snakej.html">snakej.html</a></li>
 <li><a href=".\spin.html">spin.html</a></li>
 <li><a href=".\splice.html">splice.html</a></li>
+<li><a href=".\test.html">test.html</a></li>
 <li><a href=".\test.jpg">test.jpg</a></li>
 <li><a href=".\timeline.css">timeline.css</a></li>
 <li><a href=".\widgets.html">widgets.html</a></li>
