--- a/fontcss.html
+++ b/fontcss.html
@@ -326,22 +326,25 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
         <div style="font-family:fsk;" class="usrtxt" contenteditable ></div>
     </fieldset>
     <fieldset>
-        <legend>helvnow</legend>
-        <div style="font-family:helvnow;" class="usrtxt" contenteditable ></div>
+            <legend>helvnow</legend>
+            <div style="font-family:helvnow;" class="usrtxt" contenteditable ></div>
     </fieldset>
     <fieldset>
-        <legend>segoe</legend>
-        <div style="font-family:segoe;" class="usrtxt" contenteditable ></div>
+            <legend>segoe</legend>
+            <div style="font-family:segoe;" class="usrtxt" contenteditable ></div>
     </fieldset>
     <fieldset>
-        <legend>gtamerica</legend>
-        <div style="font-family:gtamerica;" class="usrtxt" contenteditable ></div>
+            <legend>gtamerica</legend>
+            <div style="font-family:gtamerica;" class="usrtxt" contenteditable ></div>
     </fieldset>
     <fieldset>
             <legend>suisse</legend>
             <div style="font-family:suisse;" class="usrtxt" contenteditable ></div>
     </fieldset>
-
+    <fieldset>
+            <legend>made</legend>
+            <div style="font-family:made;" class="usrtxt" contenteditable ></div>
+    </fieldset>
         
 </article>
 <hr>
