--- a/cyb.html
+++ b/cyb.html
@@ -22,6 +22,11 @@ def genSubRule(lol):
 <pre translate="no" class="prettyprint lang-python" style="overflow-x: auto;width: 100%">
 genSubRule=lambda lol: {x: sorted(t, key=lambda x: len(x))[0] for t in lol for x in t}
 </pre>
+
+<h3>2. world's fastest primility checker in one line python code</h3>
+<pre translate="no" class="prettyprint lang-python" style="overflow-x: auto; width: 100%;">
+isPrime=lambda x: False if x<2 or x%2==0 else not any([x%i==0 for i in range(3,int(x**.5)+1,2)])
+</pre>
 <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 </body>
 </html>
