--- a/fontcss.html
+++ b/fontcss.html
@@ -7,6 +7,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel="shortcut icon" href="https://www.svgrepo.com/show/513642/font.svg" type="image/svg">
 <link rel='stylesheet' href='font.css'>
+<link rel='stylesheet' href='ir.css'>
 <title>fonts repo</title>
 <style>
 a{
@@ -122,10 +123,6 @@ span#instant.fade-out {
 legend#var::after{
     content: "＊";
 }
-
-/* input#showBold:checked ~ legend#var>div{
-font-weight: bold;
-} */
 
 </style>
 
