--- a/fontcss.html
+++ b/fontcss.html
@@ -344,7 +344,22 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
         <legend id="var" >right</legend>
         <div style="font-family:right;" class="usrtxt" contenteditable ></div>
     </fieldset>
-        
+
+    <fieldset>
+        <legend id="var" >zilla</legend>
+        <div style="font-family:zilla;" class="usrtxt" contenteditable ></div>
+    </fieldset>
+
+    <fieldset>
+        <legend id="var" >inter</legend>
+        <div style="font-family:inter;" class="usrtxt" contenteditable ></div>
+    </fieldset>
+    
+    <fieldset>
+        <legend id="var" >passenger</legend>
+        <div style="font-family:passenger;" class="usrtxt" contenteditable ></div>
+    </fieldset>
+
 </article>
 <div style="margin: 0 8vw;">
     <hr>
