--- a/fontcss.html
+++ b/fontcss.html
@@ -133,10 +133,10 @@ legend#var::after{
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/prettify.css">
 
 </head>
-<body style="margin:0; font-family: BDLifelessGrotesk;">
+<body style="margin:0; font-family: inter;">
 
 <article>
-    <h1 style="font-weight: normal; font-size: 2rem;">Welcome to use font.css</h1>
+    <h1 style="font-weight: normal; font-size: 2rem;">Font<span style="color: orangered; ">ss</span>entials</h1>
     <details>
         <summary style="color:red;"><span style=" font-size: 1.5rem;">Terms and Notices</span></summary>
         Please be aware that these fonts are intended for personal and non-commercial use only. By importing and using our CSS file, you agree not to use these fonts for any commercial purposes. Unauthorized commercial use of these fonts is strictly prohibited. If you choose to use these fonts for commercial purposes, you do so at your own risk and will bear full responsibility for any consequences that may arise.
