--- a/fontcss.html
+++ b/fontcss.html
@@ -360,6 +360,16 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
         <div style="font-family:passenger;" class="usrtxt" contenteditable ></div>
     </fieldset>
 
+    <fieldset>
+        <legend id="var" >stco</legend>
+        <div style="font-family:stco;" class="usrtxt" contenteditable ></div>
+    </fieldset>
+
+    <fieldset>
+        <legend id="var" >equinox</legend>
+        <div style="font-family:equinox;" class="usrtxt" contenteditable ></div>
+    </fieldset>
+
 </article>
 <div style="margin: 0 8vw;">
     <hr>
