--- a/fontcss.html
+++ b/fontcss.html
@@ -361,8 +361,8 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
     </fieldset>
 
     <fieldset>
-        <legend id="var" >stco</legend>
-        <div style="font-family:stco;" class="usrtxt" contenteditable ></div>
+        <legend id="var" >scto</legend>
+        <div style="font-family:scto;" class="usrtxt" contenteditable ></div>
     </fieldset>
 
     <fieldset>
