--- a/fontcss.html
+++ b/fontcss.html
@@ -370,6 +370,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
         <div style="font-family:equinox;" class="usrtxt" contenteditable ></div>
     </fieldset>
 
+    <fieldset>
+        <legend id="var" >charles</legend>
+        <div style="font-family:charles;" class="usrtxt" contenteditable ></div>
+    </fieldset>
+
 </article>
 <div style="margin: 0 8vw;">
     <hr>
