--- a/fontcss.html
+++ b/fontcss.html
@@ -379,6 +379,16 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend id="var" >charles</legend>
             <div style="font-family:charles;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend id="var" >univ</legend>
+            <div style="font-family:univ;" class="usrtxt" contenteditable ></div>
+        </fieldset>
+        
+        <fieldset>
+            <legend id="var" >haas</legend>
+            <div style="font-family:haas;" class="usrtxt" contenteditable ></div>
+        </fieldset>
     </div>
 
 </article>
