--- a/fontcss.html
+++ b/fontcss.html
@@ -389,6 +389,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend id="var" >haas</legend>
             <div style="font-family:haas;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend >psu</legend>
+            <div style="font-family:psu;" class="usrtxt" contenteditable ></div>
+        </fieldset>
     </div>
 
 </article>
